--- a/style_div.css
+++ b/style_div.css
@@ -1,112 +1,81 @@
 body {
   background-color: black;
   height: 100vh;
-  margin: 0rem;
+  margin: 0;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes rotate {
   from {
-    rotate: 0deg;
+    transform: rotate(0deg);
   }
-
   50% {
-    scale: 1 1.5;
+    transform: scale(1.2) rotate(180deg);
   }
-
   to {
-    rotate: 360deg;
+    transform: rotate(360deg);
   }
 }
 
 #blob {
-  background-color: white;
-  height: 34vmax;
-  aspect-ratio: 1;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
+  height: 30vmax;
+  width: 30vmax;
   border-radius: 50%;
-  background: linear-gradient(to right, aquamarine, mediumpurple);
-  animation: rotate 20s infinite;
-  opacity: 0.8;
+  background: linear-gradient(135deg, aquamarine, mediumpurple);
+  animation: rotate 15s infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.7;
+  z-index: 1;
 }
 
 #blur {
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
-  position: absolute;
+  backdrop-filter: blur(10vmax);
   z-index: 2;
-  backdrop-filter: blur(12vmax);
 }
 
 h1 {
-  font-family: "Space Mono", monospace;
-  font-size: clamp(3rem, 10vw, 10rem);
+  font-family: 'Space Mono', monospace;
+  font-size: clamp(2.5rem, 6vw, 5rem);
   color: white;
-  white-space: nowrap;
-  padding: 0rem clamp(1rem, 2vw, 3rem);
-  border-radius: clamp(0.4rem, 0.75vw, 1rem);
-  margin: 0rem;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
+  text-align: center;
+  margin: 0;
+  position: relative;
   z-index: 3;
-}
-
-/* -- Links -- */
-
-#links {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 10;
   padding: 1rem;
+  border-radius: 1rem;
 }
 
-.meta-link {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+/* Responsive adjustments */
+@media (max-width: 480px) {
+  #blob {
+    height: 40vmax;
+    width: 40vmax;
+  }
+
+  h1 {
+    font-size: clamp(2rem, 6vw, 4rem);
+    padding: 0.5rem;
+  }
 }
 
-.meta-link > :is(span, a) {
-  font-family: "Rubik", sans-serif;
-  color: white;
-}
+@media (min-width: 1200px) {
+  #blob {
+    height: 25vmax;
+    width: 25vmax;
+  }
 
-.meta-link > .label {
-  width: 100px;
-  text-align: right;
-}
-
-.meta-link > a {
-  text-decoration: none;
-  outline: none;
-}
-
-.meta-link > a.source {
-  color: rgb(94, 106, 210);
-}
-
-.meta-link > a:is(:hover, :focus) > i {
-  color: white;
-}
-
-.meta-link > a.youtube {
-  color: rgb(239, 83, 80);
-}
-
-.meta-link > a.youtube > i {
-  padding-top: 0.2rem;
-}
-
-.meta-link > a > i {
-  height: 1rem;
-  line-height: 1rem;
+  h1 {
+    font-size: clamp(3rem, 7vw, 6rem);
+  }
 }
